compiler/testData/diagnostics/testsWithJsStdLib/externalTypeInheritsExternalTypeViaTypeAlias.fir.kt
external interface Base

typealias TypeAlias = Base

external interface <!EXTERNAL_TYPE_EXTENDS_NON_EXTERNAL_TYPE!>Derived<!>: TypeAlias
